--- a/.github/workflows/build-listing.yml
+++ b/.github/workflows/build-listing.yml
@@ -1,10 +1,12 @@
 name: Build Repo Listing
 
-on: 
+on:
   workflow_dispatch:
   push:
     branches: main
     paths: source.json
+  repository_dispatch:
+    types: [update-listing]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
